refactor: add tmdbid to the url, migrate to the new api
